--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vagoscorp.vccompost"
-    android:versionCode="20140106"
+    android:versionCode="20140429"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
     
     <uses-permission
@@ -23,17 +23,20 @@
     <uses-permission
         android:name="android.permission.INTERNET"
         android:required="true" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:hardwareAccelerated="true">
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.vagoscorp.vccompost.MainActivity"
+            android:name=".MainActivity"
+            android:hardwareAccelerated="true"
             android:label="@string/app_name"
-            android:screenOrientation="sensorLandscape"
-            android:hardwareAccelerated="true" >
+            android:screenOrientation="sensorLandscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,9 +44,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vagoscorp.vccompost.Set_Server"
+            android:name=".Set_Server"
             android:label="@string/set_server"
-            android:parentActivityName="com.vagoscorp.vccompost.MainActivity"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/Dialog" >
             <meta-data
@@ -51,22 +54,31 @@
                 android:value="com.vagoscorp.vccompost.MainActivity" />
         </activity>
         <activity
-            android:name="com.vagoscorp.vccompost.Dat_vag"
+            android:name=".Dat_vag"
+            android:hardwareAccelerated="true"
             android:label="@string/title_activity_dat_vag"
-            android:parentActivityName="com.vagoscorp.vccompost.MainActivity"
-            android:screenOrientation="sensorLandscape"
-            android:hardwareAccelerated="true">
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="sensorLandscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.vagoscorp.vccompost.MainActivity" />
         </activity>
-
+        <activity
+            android:name=".Routine"
+            android:label="@string/title_activity_routine"
+            android:screenOrientation="sensorLandscape"
+            android:hardwareAccelerated="true">
+<!--             android:parentActivityName=".Dat_vag"> -->
+<!--             <meta-data -->
+<!--                 android:name="android.support.PARENT_ACTIVITY" -->
+<!--                 android:value="com.vagoscorp.vccompost.Dat_vag" /> -->
+        </activity>
         <service
-            android:name="com.vagoscorp.vccompost.MainService"
+            android:name=".MainService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.INTERNET"
-            android:stopWithTask="false">
+            android:stopWithTask="false" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETE" />
 
