--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vagoscorp.vccompost"
-    android:versionCode="20140429"
-    android:versionName="1.0" >
+    android:versionCode="20140901"
+    android:versionName="1.2" >
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="19" />
-    
+        android:targetSdkVersion="20" />
+
     <uses-permission
         android:name="android.permission.ACCESS_WIFI_STATE"
         android:required="true" />
@@ -23,8 +23,8 @@
     <uses-permission
         android:name="android.permission.INTERNET"
         android:required="true" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -65,14 +65,16 @@
         </activity>
         <activity
             android:name=".Routine"
+            android:hardwareAccelerated="true"
             android:label="@string/title_activity_routine"
-            android:screenOrientation="sensorLandscape"
-            android:hardwareAccelerated="true">
-<!--             android:parentActivityName=".Dat_vag"> -->
-<!--             <meta-data -->
-<!--                 android:name="android.support.PARENT_ACTIVITY" -->
-<!--                 android:value="com.vagoscorp.vccompost.Dat_vag" /> -->
+            android:screenOrientation="sensorLandscape" >
+
+            <!-- android:parentActivityName=".Dat_vag"> -->
+            <!-- <meta-data -->
+            <!-- android:name="android.support.PARENT_ACTIVITY" -->
+            <!-- android:value="com.vagoscorp.vccompost.Dat_vag" /> -->
         </activity>
+
         <service
             android:name=".MainService"
             android:enabled="true"
@@ -85,6 +87,16 @@
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".SaveRFiles"
+            android:label="@string/title_activity_save_rfiles"
+            android:parentActivityName=".Routine"
+            android:theme="@style/Dialog" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.vagoscorp.vccompost.Routine" />
+        </activity>
     </application>
 
 </manifest>
