--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vagoscorp.vccompost"
-    android:versionCode="20140901"
+    android:versionCode="20142708"
     android:versionName="1.2" >
 
     <uses-sdk
@@ -67,12 +67,11 @@
             android:name=".Routine"
             android:hardwareAccelerated="true"
             android:label="@string/title_activity_routine"
-            android:screenOrientation="sensorLandscape" >
-
-            <!-- android:parentActivityName=".Dat_vag"> -->
-            <!-- <meta-data -->
-            <!-- android:name="android.support.PARENT_ACTIVITY" -->
-            <!-- android:value="com.vagoscorp.vccompost.Dat_vag" /> -->
+            android:screenOrientation="sensorLandscape"
+            android:parentActivityName=".Dat_vag" >
+            <meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.vagoscorp.vccompost.Dat_vag" />
         </activity>
 
         <service
